@@ -30,7 +30,9 @@ this repository contains the full copyright notices and license terms. -->
     <group col="20" colspan="2" id="buttons">
         <button name="cancel" string="Cancel" icon="tryton-cancel"/>
         <button name="draft" string="Reset to Draft" icon="tryton-clear"/>
+        <button name="do" string="Do" icon="tryton-go-next"/>
     </group>
     <field name="unit_price_required" invisible="1" colspan="4"/>
     <field name="unit_digits" invisible="1" colspan="4"/>
+    <field name="assignation_required" invisible="1" colspan="4"/>
 </form>
