@@ -13,5 +13,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="state"/>
     <button name="cancel" string="Cancel"/>
     <button name="draft" string="Reset to Draft"/>
+    <button name="do" string="Do"/>
     <field name="unit_digits" tree_invisible="1"/>
+    <field name="assignation_required" tree_invisible="1"/>
 </tree>
