@@ -1,3 +1,4 @@
+* Add do button on stock move form & list
 * Add warehouse address on internal shipment
 
 Version 3.8.0 - 2015-11-02
